POIs modal, datepicker, timepicker; lib update.

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -9,6 +9,8 @@
 	"profile": "Profilo",
 	"login": "Accedi",
 	"logout": "Esci",
+	"set": "Imposta",
+	"today": "Oggi",
 	"home_tab_1": "Richieste",
 	"home_tab_2": "Offerte",
 	"poi_type": "Tipo",
