Working on the forms

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -13,10 +13,17 @@
 	"today": "Oggi",
 	"home_tab_1": "Richieste",
 	"home_tab_2": "Offerte",
+	"new_poi": "Ufficio",
+	"new_poi_placeholder": "Tocca per scegliere l'ufficio",
+	"new_datetime": "Specifica data e ora",
+	"new_date": "Data",
+	"new_date_placeholder": "Scegli la data",
+	"new_time": "Ora",
+	"new_time_placeholder": "Scegli l'orario",
 	"poi_type": "Tipo",
-	"poi_type_placeholder": "Tocca per selezionare il tipo",
+	"poi_type_placeholder": "Tocca per scegliere il tipo",
 	"poi_region": "Regione",
-	"poi_region_placeholder": "Tocca per selezionare la regione",
+	"poi_region_placeholder": "Tocca per scegliere la regione",
 	"poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
 	"poi_filter_placeholder": "Filtra...",
 	"results_empty": "Nessuna offerta trovata"
