web: registration iter (not completed)

--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -4,12 +4,14 @@ RegistrationException=Problem occurred. Please retry later
 AlreadyRegisteredException=User email is already in use
 InvalidDataException=Invalid field values
 InvalidPasswordException=Incorrect username / password
+UnauthorizedException=Unauthorized access or user profile not existing
 
 lbl_login_title=Smart Community Sign In
 lbl_login=Sign In
 lbl_register=Not registered? Sign up!
 lbl_pwd_reset=Forgot password?
 
+lbl_cf=Fiscal Code
 lbl_user=Email
 lbl_pwd=Password
 lbl_name=Name
