--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -1,16 +1,17 @@
-NotRegisteredException=Utente o password non validi
-NotConfirmedException=La registrazione non è stata confirmata
+NotRegisteredException=Codice di verifica non valido o già utilizzato
+NotConfirmedException=La registrazione non è stata confermata
 RegistrationException=E' stato rilevato un problema. Si prega di riprovare più tardi
 AlreadyRegisteredException=L'email è già in uso
 InvalidDataException=I valori dei campi non sono validi
 InvalidPasswordException=Utente o password non validi
-
+UnauthorizedException=Accesso alla risorsa non autorizzato o profilo non esistente
 
 lbl_login_title=Smart Community Sign In
 lbl_login=Sign In
 lbl_register=Non sei registrato? Iscriviti!
 lbl_pwd_reset=Password dimenticata?
 
+lbl_cf=Codice Fiscale
 lbl_user=Email
 lbl_pwd=Password
 lbl_name=Nome
