--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -9,22 +9,34 @@
 	"profile": "Profilo",
 	"login": "Accedi",
 	"logout": "Esci",
+	"search": "Cerca",
+	"create": "Crea",
 	"set": "Imposta",
 	"today": "Oggi",
 	"home_tab_1": "Richieste",
 	"home_tab_2": "Offerte",
-	"new_poi": "Ufficio",
-	"new_poi_placeholder": "Tocca per scegliere l'ufficio",
-	"new_datetime": "Specifica data e ora",
-	"new_date": "Data",
-	"new_date_placeholder": "Scegli la data",
-	"new_time": "Ora",
-	"new_time_placeholder": "Scegli l'orario",
+	"search_title": "Ricerca offerte",
+	"newrequest_title": "Nuova richiesta",
+	"newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
+	"newrequest_done": "Richiesta creata con successo",
+	"newoffer_title": "Nuova offerta",
+	"newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
+	"newoffer_done": "Offerta creata con successo",
+	"form_poi": "Ufficio",
+	"form_poi_placeholder": "Tocca per scegliere l'ufficio",
+	"form_datetime": "Specifica data e ora",
+	"form_date": "Data",
+	"form_date_placeholder": "Scegli la data",
+	"form_time": "Ora",
+	"form_time_from": "dalle ore",
+	"form_time_to": "alle ore",
+	"form_time_placeholder": "Scegli l'orario",
 	"poi_type": "Tipo",
 	"poi_type_placeholder": "Tocca per scegliere il tipo",
 	"poi_region": "Regione",
 	"poi_region_placeholder": "Tocca per scegliere la regione",
 	"poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
 	"poi_filter_placeholder": "Filtra...",
-	"results_empty": "Nessuna offerta trovata"
+	"requests_empty": "Nessuna richiesta trovata",
+	"offers_empty": "Nessuna offerta trovata"
 }
