Search results & details

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -12,11 +12,14 @@
 	"search": "Cerca",
 	"create": "Crea",
 	"delete": "Elimina",
-	"set": "Imposta",
+	"set": "OK",
 	"today": "Oggi",
+	"call": "Chiama",
+	"email": "Email",
 	"home_tab_1": "Richieste",
 	"home_tab_2": "Offerte",
 	"search_title": "Ricerca offerte",
+	"searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
 	"newrequest_title": "Nuova richiesta",
 	"newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
 	"newrequest_done": "Richiesta creata con successo",
