LoginCtrl e login view created

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -9,6 +9,11 @@
 	"profile": "Profilo",
 	"login": "Accedi",
 	"logout": "Esci",
+	"cf": "Codice Fiscale",
+	"password": "Password",
+	"password_lost": "Ho dimenticato la password",
+	"new_account": "oppure effettua la registrazione",
+	"register": "Registrazione",
 	"search": "Cerca",
 	"create": "Crea",
 	"delete": "Elimina",
