--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -43,3 +43,10 @@ lbl_changesuccess_text=You have successfully updated your Smart Community creden
 confirmation.subject=Smart Community: Registration confirmation request
 reset.subject=Smart Community: Password reset request
 
+notif_NEW_SERVICE_REQUEST=New request
+notif_NEW_SERVICE_OFFER=New offer
+notif_APPLICATION_ACCEPTED=Request accepted
+notif_APPLICATION_REJECTED=Request rejected
+notif_SERVICE_REQUEST_DELETED=Request cancelled
+notif_NEW_APPLICATION=New application
+notif_APPLICATION_DELETED=Applicatino cancelled
