--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -42,3 +42,11 @@ lbl_changesuccess_text=Hai aggiornato le credenziali di Smart Community.
 
 confirmation.subject=Smart Community: conferma la registrazione 
 reset.subject=Smart Community: Richiesta di cambiamento di credenziali
+
+notif_NEW_SERVICE_REQUEST=Nuova richiesta
+notif_NEW_SERVICE_OFFER=Nuova offerta
+notif_APPLICATION_ACCEPTED=Richiesta accettata
+notif_APPLICATION_REJECTED=Richiesta rifiutata
+notif_SERVICE_REQUEST_DELETED=Richiesta annulata
+notif_NEW_APPLICATION=Nuova applicazione
+notif_APPLICATION_DELETED=Applicazione annulata
