Other color schema and strings stuff

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -9,6 +9,7 @@
 	"profile": "Profilo",
 	"login": "Accedi",
 	"logout": "Esci",
+	"credits": "Credits",
 	"cf": "Codice Fiscale",
 	"password": "Password",
 	"password_lost": "Ho dimenticato la password",
@@ -40,19 +41,24 @@
 	"form_time_from": "dalle ore",
 	"form_time_to": "alle ore",
 	"form_time_placeholder": "Scegli l'orario",
-	"poi_type": "Tipo",
+	"poi_type": "Tipo di ufficio",
 	"poi_type_placeholder": "Tocca per scegliere il tipo",
 	"poi_region": "Regione",
 	"poi_region_placeholder": "Tocca per scegliere la regione",
 	"poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
+	"poi_select": "Seleziona l'ufficio che ti interessa",
 	"poi_filter_placeholder": "Filtra...",
 	"requests_empty": "Nessuna richiesta trovata",
 	"request_detail": "Dettaglio richiesta",
+	"request_detail_poi": "Richiesta di sostituzione in",
+	"request_detail_date": "per il giorno",
 	"request_delete_confirm_title": "Conferma eliminazione",
 	"request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
 	"request_delete_done": "Richiesta eliminata",
 	"offers_empty": "Nessuna offerta trovata",
 	"offer_detail": "Dettaglio offerta",
+	"offer_detail_poi": "Offerta di disponibilità per",
+	"offer_detail_date": "per il giorno",
 	"offer_delete_confirm_title": "Conferma eliminazione",
 	"offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
 	"offer_delete_done": "Offerta eliminata",
