Notification message text extensions

--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -48,5 +48,6 @@ notif_NEW_SERVICE_OFFER=New offer
 notif_APPLICATION_ACCEPTED=Request accepted
 notif_APPLICATION_REJECTED=Request rejected
 notif_SERVICE_REQUEST_DELETED=Request cancelled
+notif_SERVICE_OFFER_DELETED=Offerta annulata
 notif_NEW_APPLICATION=New application
 notif_APPLICATION_DELETED=Applicatino cancelled
