--- a/gi-pro-web/src/main/resources/locale/messages.properties
+++ b/gi-pro-web/src/main/resources/locale/messages.properties
@@ -42,11 +42,16 @@ lbl_changesuccess_text=Hai aggiornato le credenziali di Smart Community.
 confirmation.subject=Smart Community: conferma la registrazione 
 reset.subject=Smart Community: Richiesta di cambiamento di credenziali
 
-notif_NEW_SERVICE_REQUEST=Nuova richiesta
-notif_NEW_SERVICE_OFFER=Nuova offerta
-notif_SERVICE_REQUEST_DELETED=Richiesta annulata
-notif_SERVICE_OFFER_DELETED=Offerta annulata
-notif_NEW_APPLICATION=Nuova applicazione
-notif_APPLICATION_ACCEPTED=Richiesta accettata
-notif_APPLICATION_REJECTED=Richiesta rifiutata
-notif_APPLICATION_DELETED=Applicazione annulata
+notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
+notif_NEW_SERVICE_OFFER_sostituzione=Nuova offerta di sostituzione
+
+notif_SERVICE_REQUEST_DELETED_sostituzione=Richiesta annulata
+notif_SERVICE_OFFER_DELETED_sostituzione=Offerta annulata
+notif_NEW_APPLICATION_sostituzione=Nuova applicazione
+notif_APPLICATION_ACCEPTED_sostituzione=Richiesta accettata
+notif_APPLICATION_REJECTED_sostituzione=Richiesta rifiutata
+notif_APPLICATION_DELETED_sostituzione=Applicazione annulata
+
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_sostituzione=Richiesta di sostituzione di {0} {1} a {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_sostituzione=Offerta di sostituzione di {0} {1}, per la richiesta a {2}, il {3}
