Registration, history tabs, other stuff

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -13,8 +13,15 @@
 	"cf": "Codice Fiscale",
 	"password": "Password",
 	"password_lost": "Ho dimenticato la password",
+	"password_again": "Ripeti password",
 	"new_account": "oppure effettua la registrazione",
 	"register": "Registrazione",
+	"register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
+	"register_form_cf_empty": "Inserire il Codice Fiscale",
+	"register_form_cf_invalid": "Codice Fiscale non valido",
+	"register_form_pwd_empty": "Compilare entrambi i campi password",
+	"register_form_pwd_different": "Le password non corrispondono",
+	"register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
 	"search": "Cerca",
 	"create": "Crea",
 	"delete": "Elimina",
