Web pages styling

--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -6,7 +6,7 @@ InvalidDataException=I valori dei campi non sono validi
 InvalidPasswordException=Utente o password non validi
 UnauthorizedException=Accesso alla risorsa non autorizzato o profilo non esistente
 
-lbl_login_title=Smart Community Sign In
+lbl_login_title=GiPro Sign In
 lbl_login=Sign In
 lbl_register=Non sei registrato? Iscriviti!
 lbl_pwd_reset=Password dimenticata?
@@ -25,7 +25,7 @@ lbl_confirm_btn=Conferma
 lbl_resend=Inviami ancora l'email di conferma
 
 lbl_confirm_success_title=Registrazione riuscita!
-lbl_confirm_success_text=L'iscrizione a Smart Community è stata completata.
+lbl_confirm_success_text=L'iscrizione è stata completata.
 lbl_confirm_error_title=La conferma della registrazione è fallita!
 
 lbl_resend_title=Inviami ancora l'email di conferma
@@ -38,10 +38,10 @@ lbl_resetsuccess_title=L'email è stata spedita!
 lbl_resetsuccess_text=Apri il link nella email di conferma per aggiornare le credenziali 
 
 lbl_changesuccess_title=La password è stata aggiornata!
-lbl_changesuccess_text=Hai aggiornato le credenziali di Smart Community.
+lbl_changesuccess_text=Hai aggiornato le credenziali.
 
-confirmation.subject=Smart Community: conferma la registrazione 
-reset.subject=Smart Community: Richiesta di cambiamento di credenziali
+confirmation.subject=GiPro: conferma la registrazione 
+reset.subject=GiPro: Richiesta di cambiamento di credenziali
 
 notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
 notif_NEW_SERVICE_OFFER_sostituzione=Nuova offerta di sostituzione
