--- a/gi-pro-web/src/main/resources/locale/messages.properties
+++ b/gi-pro-web/src/main/resources/locale/messages.properties
@@ -39,8 +39,8 @@ lbl_resetsuccess_text=Apri il link nella email di conferma per aggiornare le cre
 lbl_changesuccess_title=La password è stata aggiornata!
 lbl_changesuccess_text=Hai aggiornato le credenziali.
 
-confirmation.subject=GiPro: Conferma la registrazione 
-reset.subject=GiPro: Richiesta di cambiamento di credenziali
+confirmation.subject=CNF: Conferma la registrazione 
+reset.subject=CNF: Richiesta di cambiamento di credenziali
 
 notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
 notif_NEW_SERVICE_OFFER_sostituzione=Nuova offerta di sostituzione
