--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -40,8 +40,8 @@ lbl_resetsuccess_text=Open the link in the confirmation email to update your cre
 lbl_changesuccess_title=Password successfully updated!
 lbl_changesuccess_text=You have successfully updated your credentials.
 
-confirmation.subject=GiPro: Registration confirmation request
-reset.subject=GiPro: Password reset request
+confirmation.subject=CNF: Registration confirmation request
+reset.subject=CNF: Password reset request
 
 notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
 notif_NEW_SERVICE_OFFER_sostituzione=Nuova offerta di sostituzione
