--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -94,5 +94,10 @@
     "credits_info": "Per informazioni",
 	"profile_form_phone_empty": "Inserire il numero di telefono",
     "offer_not_exist": "Offerta di sostituzione non esiste",
-    "request_not_exist": "Richiesta di sostituzione non esiste"
+    "request_not_exist": "Richiesta di sostituzione non esiste",
+	"tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
+	"tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
+	"tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
+	"tutorial_details": "Contatta direttamente il collega",
+	"tutorial_functions": "Accedi alle funzionalità dell'app"
 }
