--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -13,6 +13,7 @@
 	"tutorial": "Tutorial",
     "problem":"Segnala un problema",
 	"cf": "Codice Fiscale",
+	"cellPhone": "Cellulare",
 	"password": "Password",
 	"password_lost": "Ho dimenticato la password",
 	"password_again": "Ripeti password",
