--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -103,5 +103,5 @@
 	"tutorial_functions": "Accedi alle funzionalità della app",
     "tutorial_welcome1": "Benvenuto in TECNOTOGA, la soluzione per l’Avvocato 4.0.",
     "tutorial_welcome2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
-    "tutorial_welcome3": "Schiaccia 'Accedi' per accedere alla app."
+    "tutorial_welcome3": "Clicca 'Accedi' per accedere alla app."
 }
