--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -44,10 +44,10 @@ confirmation.subject=CNF: Registration confirmation request
 reset.subject=CNF: Password reset request
 
 notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
-notif_NEW_SERVICE_OFFER_sostituzione=Nuova offerta di sostituzione
+notif_NEW_SERVICE_OFFER_sostituzione=Nuova disponibilità di sostituzione
 
 notif_SERVICE_REQUEST_DELETED_sostituzione=Richiesta annulata
-notif_SERVICE_OFFER_DELETED_sostituzione=Offerta annulata
+notif_SERVICE_OFFER_DELETED_sostituzione=Disponibilità annulata
 notif_NEW_APPLICATION_sostituzione=Nuova applicazione
 notif_APPLICATION_ACCEPTED_sostituzione=Richiesta accettata
 notif_APPLICATION_REJECTED_sostituzione=Richiesta rifiutata
@@ -55,4 +55,4 @@ notif_APPLICATION_DELETED_sostituzione=Applicazione annulata
 
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_sostituzione=Richiesta di sostituzione di {0} {1} a {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_sostituzione=Offerta di sostituzione di {0} {1}, per la richiesta a {2}, il {3}
+notif_text_NEW_SERVICE_OFFER_sostituzione=Disponibilità di sostituzione di {0} {1}, per la richiesta a {2}, il {3}
