--- a/gi-pro-web/src/main/resources/locale/messages.properties
+++ b/gi-pro-web/src/main/resources/locale/messages.properties
@@ -42,8 +42,8 @@ lbl_changesuccess_text=Hai aggiornato le credenziali.
 confirmation.subject=CNF: Conferma la registrazione 
 reset.subject=CNF: Richiesta di cambiamento di credenziali
 
-notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta di sostituzione
-notif_NEW_SERVICE_OFFER_sostituzione=Nuova disponibilità di sostituzione
+notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta
+notif_NEW_SERVICE_OFFER_sostituzione=Nuova disponibilità
 
 notif_SERVICE_REQUEST_DELETED_sostituzione=Richiesta annulata
 notif_SERVICE_OFFER_DELETED_sostituzione=Disponibilità annulata
@@ -53,5 +53,5 @@ notif_APPLICATION_REJECTED_sostituzione=Richiesta rifiutata
 notif_APPLICATION_DELETED_sostituzione=Applicazione annulata
 
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_sostituzione=Richiesta di sostituzione di {0} {1} a {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_sostituzione=Disponibilità di sostituzione di {0} {1}, per la richiesta a {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_sostituzione={0} {1} richiede sostituzione udienza per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_sostituzione={0} {1} è disponibile a sostituzione udienza per {2}, il {3}
