enhancements for release 1.0.3

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -27,7 +27,9 @@
 	"register_form_cf_invalid": "Codice Fiscale non valido",
 	"register_form_pwd_empty": "Compilare entrambi i campi password",
 	"register_form_pwd_different": "Le password non corrispondono",
-	"register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
+    "register_done_title" : "Registrazione completata",
+    "register_done1": "La tua richiesta di registrazione è stata inviata. Riceverai a breve una mail, all'indirizzo presente sull'albo, contenente un link da cliccare per confermare la registrazione. Se non ti dovesse arrivare, controlla nello spam oppure verifica di aver correttamente inserito l'indirizzo sull'albo che puoi trovare ",
+    "register_done2": "qui.",
 	"search": "Cerca",
 	"create": "Crea",
 	"delete": "Elimina",
@@ -36,15 +38,15 @@
 	"call": "Chiama",
 	"email": "Email",
 	"home_tab_1": "Richieste",
-	"home_tab_2": "Offerte",
-	"search_title": "Ricerca offerte",
-	"searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
+	"home_tab_2": "Disponibilità",
+	"search_title": "Ricerca disponibilità",
+	"searchresults_desc": "Tocca un risultato per vedere i dettagli della singola disponibilità",
 	"newrequest_title": "Nuova richiesta",
 	"newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
 	"newrequest_done": "Richiesta creata con successo",
-	"newoffer_title": "Nuova offerta",
-	"newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
-	"newoffer_done": "Offerta creata con successo",
+	"newoffer_title": "Nuova disponibilità",
+	"newoffer_desc": "Per creare una nuova offerta di disponibilità scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
+	"newoffer_done": "Disponibilità creata con successo",
 	"form_poi": "Ufficio",
 	"form_poi_placeholder": "Tocca per scegliere l'ufficio",
 	"form_datetime": "Specifica data e ora",
@@ -68,36 +70,41 @@
 	"request_delete_confirm_title": "Conferma eliminazione",
 	"request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
 	"request_delete_done": "Richiesta eliminata",
-	"offers_empty": "Nessuna offerta trovata",
-	"offer_detail": "Dettaglio offerta",
+	"offers_empty": "Nessuna disponibilità trovata",
+	"offer_detail": "Dettaglio disponibilità",
 	"offer_detail_poi": "Offerta di disponibilità per",
 	"offer_detail_date": "per il giorno",
 	"offer_delete_confirm_title": "Conferma eliminazione",
-	"offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
-	"offer_delete_done": "Offerta eliminata",
+	"offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta di disponibilità?",
+	"offer_delete_done": "Disponibilità eliminata",
 	"professional_phone": "Telefono",
 	"professional_mail": "Email",
 	"professional_pec": "PEC",
 	"professional_type_LAWYER": "avvocato",
     "ERR_SERVER": "Errore di comunicazione con il server",
-    "ERR_NETWORK": "Nessun connessione",
-    "error_signin": "Codice fiscale / password sbagliato",
+    "ERR_NETWORK": "Nessuna connessione",
+    "error_signin_1": "Errore di comunicazione con il server",
+    "error_signin_2": "L'utente non è registrato. Procedi con la registrazione prima di accedere.",
+    "error_signin_3": "La registrazione non è stata confermata. Hai ricevuto una mail all'indirizzo presente sull'albo contenente un link da cliccare per confermare la registrazione. Se non ti è arrivata, controlla nello spam. Se non la trovi, controlla di aver correttamente inserito l'indirizzo sull'albo.",
+    "error_signin_4": "Il codice fiscale o la password non sono corretti.",
+    "error_signup_1": "Errore di comunicazione con il server",
+    "error_signup_4": "Utente non autorizzato",
     "error_popup_title": "Errore di login",
     "refresh" : "Aggiorna i dati",
     "notifications_empty": "Nessuna notifica trovata",
-    "NEW_SERVICE_OFFER": "Nuova offerta di sostituzione",
+    "NEW_SERVICE_OFFER": "Nuova disponibilità di sostituzione",
     "NEW_SERVICE_REQUEST": "Nuova richiesta di sostituzione",
-    "matching_requests": "Richeste corrispondenti",
-    "matching_offers": "Offerte corrispondenti",
+    "matching_requests": "Richieste corrispondenti",
+    "matching_offers": "Disponibilità corrispondenti",
     "credits_project": "Un progetto di:",
     "credits_developer": "realizzata da:",
     "credits_initiative": "su un'iniziativa di",
     "credits_info": "Per informazioni",
 	"profile_form_phone_empty": "Inserire il numero di telefono",
-    "offer_not_exist": "Offerta di sostituzione non esiste",
+    "offer_not_exist": "Disponibilità di sostituzione non esiste",
     "request_not_exist": "Richiesta di sostituzione non esiste",
 	"tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
-	"tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
+	"tutorial_search": "Verifica le disponibilità di sostituzione udienza inserite dai tuoi colleghi",
 	"tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
 	"tutorial_details": "Contatta direttamente il collega",
 	"tutorial_functions": "Accedi alle funzionalità della app",
