--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -1,89 +1,90 @@
 {
-	"app": "TECNOTOGA",
-	"ok": "OK",
-	"close": "Chiudi",
-	"cancel": "Annulla",
-	"home": "Home",
-	"notifications": "Notifiche",
-	"history": "Storico",
-	"profile": "Profilo",
-	"login": "Accedi",
-	"logout": "Esci",
-	"credits": "Credits",
-	"tutorial": "Tutorial",
-    "problem":"Segnala un problema",
-	"cf": "Codice Fiscale",
-	"cellPhone": "Cellulare",
-	"password": "Password",
-	"password_lost": "Ho dimenticato la password",
-	"password_again": "Ripeti password",
-	"new_account": "oppure effettua la registrazione",
-	"register": "Registrazione",
-	"register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
-	"register_privacy_info": "Informativa sulla privacy",
-	"register_privacy_link": "http://www.smartcommunitylab.it",
-	"register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
-	"register_form_cf_empty": "Inserire il Codice Fiscale",
-	"register_form_cf_invalid": "Codice Fiscale non valido",
-	"register_form_pwd_empty": "Compilare entrambi i campi password",
-	"register_form_pwd_different": "Le password non corrispondono",
-	"register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
-	"search": "Cerca",
-	"create": "Crea",
-	"delete": "Elimina",
-	"set": "OK",
-	"today": "Oggi",
-	"call": "Chiama",
-	"email": "Email",
-	"home_tab_1": "Richieste",
-	"home_tab_2": "Offerte",
-	"search_title": "Ricerca offerte",
-	"searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
-	"newrequest_title": "Nuova richiesta",
-	"newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
-	"newrequest_done": "Richiesta creata con successo",
-	"newoffer_title": "Nuova offerta",
-	"newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
-	"newoffer_done": "Offerta creata con successo",
-	"form_poi": "Ufficio",
-	"form_poi_placeholder": "Tocca per scegliere l'ufficio",
-	"form_datetime": "Specifica data e ora",
-	"form_date": "Data",
-	"form_date_placeholder": "Scegli la data",
-	"form_time": "Ora",
-	"form_time_from": "dalle ore",
-	"form_time_to": "alle ore",
-	"form_time_placeholder": "Scegli l'orario",
-	"poi_type": "Tipo di ufficio",
-	"poi_type_placeholder": "Tocca per scegliere il tipo",
-	"poi_region": "Regione",
-	"poi_region_placeholder": "Tocca per scegliere la regione",
-	"poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
-	"poi_select": "Seleziona l'ufficio che ti interessa",
-	"poi_filter_placeholder": "Filtra...",
-	"requests_empty": "Nessuna richiesta trovata",
-	"request_detail": "Dettaglio richiesta",
-	"request_detail_poi": "Richiesta di sostituzione in",
-	"request_detail_date": "per il giorno",
-	"request_delete_confirm_title": "Conferma eliminazione",
-	"request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
-	"request_delete_done": "Richiesta eliminata",
-	"offers_empty": "Nessuna offerta trovata",
-	"offer_detail": "Dettaglio offerta",
-	"offer_detail_poi": "Offerta di disponibilità per",
-	"offer_detail_date": "per il giorno",
-	"offer_delete_confirm_title": "Conferma eliminazione",
-	"offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
-	"offer_delete_done": "Offerta eliminata",
-	"professional_phone": "Telefono",
-	"professional_mail": "Email",
-	"professional_pec": "PEC",
-	"professional_type_LAWYER": "avvocato",
+    "app": "Gi-Pro",
+    "ok": "OK",
+    "close": "Chiudi",
+    "cancel": "Annulla",
+    "home": "Home",
+    "notifications": "Notifiche",
+    "history": "Storico",
+    "profile": "Profilo",
+    "login": "Accedi",
+    "logout": "Esci",
+    "credits": "Credits",
+    "tutorial": "Tutorial",
+    "log_pro": "Sei un professionista?",
+    "problem": "Segnala un problema",
+    "cf": "Codice Fiscale",
+    "cellPhone": "Cellulare",
+    "password": "Password",
+    "password_lost": "Ho dimenticato la password",
+    "password_again": "Ripeti password",
+    "new_account": "oppure effettua la registrazione",
+    "register": "Registrazione",
+    "register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
+    "register_privacy_info": "Informativa sulla privacy",
+    "register_privacy_link": "http://www.smartcommunitylab.it",
+    "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
+    "register_form_cf_empty": "Inserire il Codice Fiscale",
+    "register_form_cf_invalid": "Codice Fiscale non valido",
+    "register_form_pwd_empty": "Compilare entrambi i campi password",
+    "register_form_pwd_different": "Le password non corrispondono",
+    "register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
+    "search": "Cerca",
+    "create": "Crea",
+    "delete": "Elimina",
+    "set": "OK",
+    "today": "Oggi",
+    "call": "Chiama",
+    "email": "Email",
+    "home_tab_1": "Richieste",
+    "home_tab_2": "Offerte",
+    "search_title": "Ricerca offerte",
+    "searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
+    "newrequest_title": "Nuova richiesta",
+    "newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
+    "newrequest_done": "Richiesta creata con successo",
+    "newoffer_title": "Nuova offerta",
+    "newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
+    "newoffer_done": "Offerta creata con successo",
+    "form_poi": "Ufficio",
+    "form_poi_placeholder": "Tocca per scegliere l'ufficio",
+    "form_datetime": "Specifica data e ora",
+    "form_date": "Data",
+    "form_date_placeholder": "Scegli la data",
+    "form_time": "Ora",
+    "form_time_from": "dalle ore",
+    "form_time_to": "alle ore",
+    "form_time_placeholder": "Scegli l'orario",
+    "poi_type": "Tipo di ufficio",
+    "poi_type_placeholder": "Tocca per scegliere il tipo",
+    "poi_region": "Regione",
+    "poi_region_placeholder": "Tocca per scegliere la regione",
+    "poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
+    "poi_select": "Seleziona l'ufficio che ti interessa",
+    "poi_filter_placeholder": "Filtra...",
+    "requests_empty": "Nessuna richiesta trovata",
+    "request_detail": "Dettaglio richiesta",
+    "request_detail_poi": "Richiesta di sostituzione in",
+    "request_detail_date": "per il giorno",
+    "request_delete_confirm_title": "Conferma eliminazione",
+    "request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
+    "request_delete_done": "Richiesta eliminata",
+    "offers_empty": "Nessuna offerta trovata",
+    "offer_detail": "Dettaglio offerta",
+    "offer_detail_poi": "Offerta di disponibilità per",
+    "offer_detail_date": "per il giorno",
+    "offer_delete_confirm_title": "Conferma eliminazione",
+    "offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
+    "offer_delete_done": "Offerta eliminata",
+    "professional_phone": "Telefono",
+    "professional_mail": "Email",
+    "professional_pec": "PEC",
+    "professional_type_LAWYER": "avvocato",
     "ERR_SERVER": "Errore di comunicazione con il server",
     "ERR_NETWORK": "Nessun connessione",
     "error_signin": "Codice fiscale / password sbagliato",
     "error_popup_title": "Errore di login",
-    "refresh" : "Aggiorna i dati",
+    "refresh": "Aggiorna i dati",
     "notifications_empty": "Nessuna notifica trovata",
     "NEW_SERVICE_OFFER": "Nuova offerta di sostituzione",
     "NEW_SERVICE_REQUEST": "Nuova richiesta di sostituzione",
@@ -93,15 +94,17 @@
     "credits_developer": "realizzata da:",
     "credits_initiative": "su un'iniziativa di",
     "credits_info": "Per informazioni",
-	"profile_form_phone_empty": "Inserire il numero di telefono",
+    "profile_form_phone_empty": "Inserire il numero di telefono",
     "offer_not_exist": "Offerta di sostituzione non esiste",
     "request_not_exist": "Richiesta di sostituzione non esiste",
-	"tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
-	"tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
-	"tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
-	"tutorial_details": "Contatta direttamente il collega",
-	"tutorial_functions": "Accedi alle funzionalità della app",
+    "tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
+    "tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
+    "tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
+    "tutorial_details": "Contatta direttamente il collega",
+    "tutorial_functions": "Accedi alle funzionalità della app",
     "tutorial_welcome1": "Benvenuto in TECNOTOGA, la soluzione per l’Avvocato 4.0.",
     "tutorial_welcome2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
-    "tutorial_welcome3": "Clicca 'Accedi' per accedere alla app."
+    "tutorial_welcome3": "Clicca 'Accedi' per accedere alla app.",
+    "service_tab": "Servizi",
+    "prof_tab": "Professionisti"
 }
