Generic login, clean up

--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -6,7 +6,7 @@ InvalidDataException=Invalid field values
 InvalidPasswordException=Incorrect username / password
 UnauthorizedException=Unauthorized access or user profile not existing
 
-lbl_login_title=TECNOTOGA Sign In
+lbl_login_title=GiPro Sign In
 lbl_login=Sign In
 lbl_register=Not registered? Sign up!
 lbl_pwd_reset=Forgot password?
