--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -6,7 +6,7 @@ InvalidDataException=I valori dei campi non sono validi
 InvalidPasswordException=Utente o password non validi
 UnauthorizedException=Accesso alla risorsa non autorizzato o profilo non esistente
 
-lbl_login_title=TECNOTOGA Sign In
+lbl_login_title=GiPro Sign In
 lbl_login=Sign In
 lbl_register=Non sei registrato? Iscriviti!
 lbl_pwd_reset=Password dimenticata?
