--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -11,7 +11,7 @@ lbl_login=Sign In
 lbl_register=Not registered? Sign up!
 lbl_pwd_reset=Forgot password?
 
-lbl_cf=Fiscal Code
+lbl_cf=Email
 lbl_user=Email
 lbl_pwd=Password
 lbl_name=Name
