--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -1,126 +1,128 @@
 {
-    "app": "GiPro",
-    "app_label": "App",
-    "ok": "OK",
-    "close": "Chiudi",
-    "cancel": "Annulla",
-    "home": "Home",
-    "notifications": "Notifiche",
-    "history": "Storico",
-    "profile": "Profilo",
-    "login": "Accedi",
-    "login_as_pro": "ACCEDI COME PROFESSIONISTA",
-    "enter_no_login": "ENTRA SENZA LOGIN",
-    "logout": "Esci",
-    "credits": "Credits",
-    "tutorial": "Tutorial",
-    "log_pro": "Sei un professionista?",
-    "problem": "Segnala un problema",
-    "cf": "Codice Fiscale",
-    "cellPhone": "Cellulare",
-    "password": "Password",
-    "password_lost": "Ho dimenticato la password",
-    "password_again": "Ripeti password",
-    "new_account": "oppure effettua la registrazione",
-    "register": "Registrazione",
-    "register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
-    "register_privacy_info": "Informativa sulla privacy",
-    "register_privacy_link": "http://www.smartcommunitylab.it",
-    "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
-    "register_form_cf_empty": "Inserire il Codice Fiscale",
-    "register_form_cf_invalid": "Codice Fiscale non valido",
-    "register_form_pwd_empty": "Compilare entrambi i campi password",
-    "register_form_pwd_different": "Le password non corrispondono",
-    "register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
-    "search": "Cerca",
-    "create": "Crea",
-    "delete": "Elimina",
-    "set": "OK",
-    "today": "Oggi",
-    "call": "Chiama",
-    "email": "Email",
-    "home_tab_1": "Richieste",
-    "home_tab_2": "Offerte",
-    "search_title": "Ricerca offerte",
-    "searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
-    "newrequest_title": "Nuova richiesta",
-    "newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
-    "newrequest_done": "Richiesta creata con successo",
-    "newoffer_title": "Nuova offerta",
-    "newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
-    "newoffer_done": "Offerta creata con successo",
-    "form_poi": "Ufficio",
-    "form_poi_placeholder": "Tocca per scegliere l'ufficio",
-    "form_datetime": "Specifica data e ora",
-    "form_date": "Data",
-    "form_date_placeholder": "Scegli la data",
-    "form_time": "Ora",
-    "form_time_from": "dalle ore",
-    "form_time_to": "alle ore",
-    "form_time_placeholder": "Scegli l'orario",
-    "poi_type": "Tipo di ufficio",
-    "poi_type_placeholder": "Tocca per scegliere il tipo",
-    "poi_region": "Regione",
-    "poi_region_placeholder": "Tocca per scegliere la regione",
-    "poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
-    "poi_select": "Seleziona l'ufficio che ti interessa",
-    "poi_filter_placeholder": "Filtra...",
-    "requests_empty": "Nessuna richiesta trovata",
-    "request_detail": "Dettaglio richiesta",
-    "request_detail_poi": "Richiesta di sostituzione in",
-    "request_detail_date": "per il giorno",
-    "request_delete_confirm_title": "Conferma eliminazione",
-    "request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
-    "request_delete_done": "Richiesta eliminata",
-    "offers_empty": "Nessuna offerta trovata",
-    "offer_detail": "Dettaglio offerta",
-    "offer_detail_poi": "Offerta di disponibilità per",
-    "offer_detail_date": "per il giorno",
-    "offer_delete_confirm_title": "Conferma eliminazione",
-    "offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
-    "offer_delete_done": "Offerta eliminata",
-    "professional_phone": "Telefono",
-    "professional_mail": "Email",
-    "professional_pec": "PEC",
-    "professional_type_LAWYER": "avvocato",
-    "ERR_SERVER": "Errore di comunicazione con il server",
-    "ERR_NETWORK": "Nessuna connessione",
-    "error_signin_1": "Errore di comunicazione con il server",
-    "error_signin_2": "L'utente non è registrato. Procedi con la registrazione prima di accedere.",
-    "error_signin_3": "La registrazione non è stata confermata. Hai ricevuto una mail all'indirizzo presente sull'albo contenente un link da cliccare per confermare la registrazione. Se non ti è arrivata, controlla nello spam. Se non la trovi, controlla di aver correttamente inserito l'indirizzo sull'albo.",
-    "error_signin_4": "Il codice fiscale o la password non sono corretti.",
-    "error_signup_1": "Errore di comunicazione con il server",
-    "error_signup_4": "Utente non autorizzato",
-    "error_popup_title": "Errore di login",
-    "refresh": "Aggiorna i dati",
-    "notifications_empty": "Nessuna notifica trovata",
-    "NEW_SERVICE_OFFER": "Nuova disponibilità di sostituzione",
-    "NEW_SERVICE_REQUEST": "Nuova richiesta di sostituzione",
-    "matching_requests": "Richieste corrispondenti",
-    "matching_offers": "Disponibilità corrispondenti",
-    "credits_project": "Un progetto di:",
-    "credits_developer": "realizzata da:",
-    "credits_initiative": "su un'iniziativa di",
-    "credits_info": "Per informazioni",
-    "profile_form_phone_empty": "Inserire il numero di telefono",
-    "offer_not_exist": "Offerta di sostituzione non esiste",
-    "request_not_exist": "Richiesta di sostituzione non esiste",
-    "tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
-    "tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
-    "tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
-    "tutorial_details": "Contatta direttamente il collega",
-    "tutorial_functions": "Accedi alle funzionalità della app",
-    "tutorial_welcome1": "Benvenuto in TECNOTOGA, la soluzione per l’Avvocato 4.0.",
-    "tutorial_welcome2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
-    "tutorial_welcome3": "Clicca 'Accedi' per accedere alla app.",
-    "service_tab": "Servizi",
-    "prof_tab": "Professionisti",
-    "selectedProfession_label": "Professione",
-    "selectedZone_label": "Zona",
-    "selectedService_label": "Servizio",
-    "allProfession_label": "Tutte le professioni",
-    "allZones_label": "Tutte le zone",
-    "allServices_label": "Tutti i servizi",
-    "prof_competenze_label": "Competenze",
-    "prof_descrizione_label": "Descrizione"
+  "app": "GiPro",
+  "app_label": "App",
+  "ok": "OK",
+  "close": "Chiudi",
+  "cancel": "Annulla",
+  "home": "Home",
+  "notifications": "Notifiche",
+  "history": "Storico",
+  "profile": "Profilo",
+  "login": "Accedi",
+  "login_as_pro": "ACCEDI COME PROFESSIONISTA",
+  "enter_no_login": "VAI ALL'APP",
+  "logout": "Esci",
+  "credits": "Credits",
+  "tutorial": "Tutorial",
+  "log_pro": "Sei un professionista?",
+  "problem": "Segnala un problema",
+  "cf": "Codice Fiscale",
+  "cellPhone": "Cellulare",
+  "password": "Password",
+  "password_lost": "Ho dimenticato la password",
+  "password_again": "Ripeti password",
+  "new_account": "oppure effettua la registrazione",
+  "register": "Registrazione",
+  "register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
+  "register_privacy_info": "Informativa sulla privacy",
+  "register_privacy_link": "http://www.smartcommunitylab.it",
+  "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
+  "register_form_cf_empty": "Inserire il Codice Fiscale",
+  "register_form_cf_invalid": "Codice Fiscale non valido",
+  "register_form_pwd_empty": "Compilare entrambi i campi password",
+  "register_form_pwd_different": "Le password non corrispondono",
+  "register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
+  "search": "Cerca",
+  "create": "Crea",
+  "delete": "Elimina",
+  "set": "OK",
+  "today": "Oggi",
+  "call": "Chiama",
+  "email": "Email",
+  "home_tab_1": "Richieste",
+  "home_tab_2": "Offerte",
+  "search_title": "Ricerca offerte",
+  "searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
+  "newrequest_title": "Nuova richiesta",
+  "newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
+  "newrequest_done": "Richiesta creata con successo",
+  "newoffer_title": "Nuova offerta",
+  "newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
+  "newoffer_done": "Offerta creata con successo",
+  "form_poi": "Ufficio",
+  "form_poi_placeholder": "Tocca per scegliere l'ufficio",
+  "form_datetime": "Specifica data e ora",
+  "form_date": "Data",
+  "form_date_placeholder": "Scegli la data",
+  "form_time": "Ora",
+  "form_time_from": "dalle ore",
+  "form_time_to": "alle ore",
+  "form_time_placeholder": "Scegli l'orario",
+  "poi_type": "Tipo di ufficio",
+  "poi_type_placeholder": "Tocca per scegliere il tipo",
+  "poi_region": "Regione",
+  "poi_region_placeholder": "Tocca per scegliere la regione",
+  "poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
+  "poi_select": "Seleziona l'ufficio che ti interessa",
+  "poi_filter_placeholder": "Filtra...",
+  "requests_empty": "Nessuna richiesta trovata",
+  "request_detail": "Dettaglio richiesta",
+  "request_detail_poi": "Richiesta di sostituzione in",
+  "request_detail_date": "per il giorno",
+  "request_delete_confirm_title": "Conferma eliminazione",
+  "request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
+  "request_delete_done": "Richiesta eliminata",
+  "offers_empty": "Nessuna offerta trovata",
+  "offer_detail": "Dettaglio offerta",
+  "offer_detail_poi": "Offerta di disponibilità per",
+  "offer_detail_date": "per il giorno",
+  "offer_delete_confirm_title": "Conferma eliminazione",
+  "offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
+  "offer_delete_done": "Offerta eliminata",
+  "professional_phone": "Telefono",
+  "professional_mail": "Email",
+  "professional_pec": "PEC",
+  "professional_type_LAWYER": "avvocato",
+  "ERR_SERVER": "Errore di comunicazione con il server",
+  "ERR_NETWORK": "Nessuna connessione",
+  "error_signin_1": "Errore di comunicazione con il server",
+  "error_signin_2": "L'utente non è registrato. Procedi con la registrazione prima di accedere.",
+  "error_signin_3": "La registrazione non è stata confermata. Hai ricevuto una mail all'indirizzo presente sull'albo contenente un link da cliccare per confermare la registrazione. Se non ti è arrivata, controlla nello spam. Se non la trovi, controlla di aver correttamente inserito l'indirizzo sull'albo.",
+  "error_signin_4": "Il codice fiscale o la password non sono corretti.",
+  "error_signup_1": "Errore di comunicazione con il server",
+  "error_signup_4": "Utente non autorizzato",
+  "error_popup_title": "Errore di login",
+  "refresh": "Aggiorna i dati",
+  "notifications_empty": "Nessuna notifica trovata",
+  "NEW_SERVICE_OFFER": "Nuova disponibilità di sostituzione",
+  "NEW_SERVICE_REQUEST": "Nuova richiesta di sostituzione",
+  "matching_requests": "Richieste corrispondenti",
+  "matching_offers": "Disponibilità corrispondenti",
+  "credits_project": "Un progetto di:",
+  "credits_developer": "realizzata da:",
+  "credits_initiative": "su un'iniziativa di",
+  "credits_info": "Per informazioni",
+  "profile_form_phone_empty": "Inserire il numero di telefono",
+  "offer_not_exist": "Offerta di sostituzione non esiste",
+  "request_not_exist": "Richiesta di sostituzione non esiste",
+  "tutorial_offers": "Inserisci le tue disponibilità di sostituzione udienza per i diversi Tribunali",
+  "tutorial_search": "Verifica le offerte di disponibilità di sostituzione udienza inserite dai tuoi colleghi",
+  "tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
+  "tutorial_details": "Contatta direttamente il collega",
+  "tutorial_functions": "Accedi alle funzionalità della app",
+  "tutorial_title": "GiPro App",
+  "tutorial_s1_1": "Consulta la lista dei professionisti e trova quello che fa per te",
+  "tutorial_s1_2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
+  "tutorial_s1_3": "Clicca 'Accedi' per accedere alla app.",
+  "tutorial_s2": "Sei un professionista? Accedi e metti a disposizione di altri professionisti servizi e prestazioni",
+  "service_tab": "Servizi",
+  "prof_tab": "Professionisti",
+  "selectedProfession_label": "Professione",
+  "selectedZone_label": "Zona",
+  "selectedService_label": "Servizio",
+  "allProfession_label": "Tutte le professioni",
+  "allZones_label": "Tutte le zone",
+  "allServices_label": "Tutti i servizi",
+  "prof_competenze_label": "Competenze",
+  "prof_descrizione_label": "Descrizione"
 }
