added selection of new service

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -143,5 +143,6 @@
   "prof_services": "Servizi",
   "oder_popup_title": "Ordina per",
   "orderby_alphabetically": "Alfabeto",
-  "orderby_price": "Prezzo"
+  "orderby_price": "Prezzo",
+  "new_service_add": "Aggiungi un servizio:"
 }
