--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -11,8 +11,8 @@ lbl_login=Sign In
 lbl_register=Not registered? Sign up!
 lbl_pwd_reset=Forgot password?
 
-lbl_cf=Email
-lbl_user=Email
+lbl_cf=Email PEC
+lbl_user=Email PEC
 lbl_pwd=Password
 lbl_name=Name
 lbl_surname=Surname
