--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -11,8 +11,8 @@ lbl_login=Sign In
 lbl_register=Non sei registrato? Iscriviti!
 lbl_pwd_reset=Password dimenticata?
 
-lbl_cf=Email
-lbl_user=Email
+lbl_cf=Email PEC
+lbl_user=Email PEC
 lbl_pwd=Password
 lbl_name=Nome
 lbl_surname=Cognome
