PEC replaces email in login and registration

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -123,10 +123,11 @@
   "allProfession_label": "Tutte le professioni",
   "allZones_label": "Tutte le zone",
   "allServices_label": "Tutti i servizi",
-  "prof_competenze_label": "Competenze",
+  "prof_competences_label": "Competenze",
   "prof_descrizione_label": "Descrizione",
   "search_prof": "Ricerca professioni",
   "email_placeholder": "inserisci la tua email",
+  "pec_placeholder": "inserisci la tua email PEC",
   "name_placeholder": "Inserisci il tuo nome",
   "surname_placeholder": "Inserisci il tuo cognome",
   "address_placeholder": "Inserisci il tuo indirizzo",
