--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -10,7 +10,9 @@
   "notifications": "Notifiche",
   "history": "Storico",
   "profile": "Profilo",
-  "login": "Accedi",
+  "login_subtitle_1": "Sei un professionista?",
+  "login_subtitle_2": "Accedi con le tue credenziali:",
+  "login": "Entra",
   "login_as_pro": "ACCEDI COME PROFESSIONISTA",
   "enter_no_login": "ENTRA SENZA LOGIN",
   "logout": "Esci",
@@ -20,12 +22,17 @@
   "problem": "Segnala un problema",
   "cf": "Codice Fiscale",
   "cellPhone": "Cellulare",
-  "password": "Password",
-  "password_lost": "Ho dimenticato la password",
-  "password_again": "Ripeti password",
-  "new_account": "oppure effettua la registrazione",
-  "register": "Registrazione",
-  "register_new_account": "Registrati indicando il Codice Fiscale e scegli una password",
+  "password": "Password *",
+  "password_lost": "Password dimenticata?",
+  "password_again": "Conferma password *",
+  "passwords_dont_match": "Le password non corrispondono",
+  "new_account": "Non hai un account?",
+  "register": "Iscriviti",
+  "register_or": "oppure",
+  "register_new_account": "Registrati inserendo i seguenti dati:",
+  "register_mandatory_fields": "I campi contrassegnati con il simbolo * sono obbligatori.",
+  "register_moreinfo": "Ti chiediamo di inserire alcune informazioni aggiuntive per completare il tuo profilo.",
+  "register_declaration": "Dichiaro di essere un professionista appartenente alla categoria professionale indicata",
   "register_privacy_info": "Informativa sulla privacy",
   "register_privacy_link": "http://www.smartcommunitylab.it",
   "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
@@ -128,17 +135,20 @@
   "prof_competences_label": "Competenze",
   "prof_descrizione_label": "Descrizione",
   "search_prof": "Ricerca professioni",
-  "email_placeholder": "inserisci la tua email",
-  "pec_placeholder": "inserisci la tua email PEC",
-  "name_placeholder": "Inserisci il tuo nome",
-  "surname_placeholder": "Inserisci il tuo cognome",
-  "address_placeholder": "Inserisci il tuo indirizzo",
+  "email_placeholder": "Inserisci la tua email",
+  "pec_placeholder": "Inserisci la tua PEC *",
+  "name_placeholder": "Nome *",
+  "surname_placeholder": "Cognome *",
+  "address_placeholder": "Indirizzo ufficio *",
   "cf_placeholder": "Inserisci il tuo codice fiscale",
+  "albo_placeholder": "Numero di iscrizione all'albo *",
   "piva_placeholder": "Inserisci la tua partita iva",
-  "profession_placeholder": "Seleziona la tua professione",
-  "area_placeholder": "Seleziona la zona in cui operi",
+  "profession_placeholder": "Professione *",
+  "profession_popup_placeholder": "Selezione professione",
+  "area_placeholder": "Regione *",
+  "area_popup_placeholder": "Seleziona la regione in cui operi",
   "registration2_button_label": "Avanti",
-  "retype-password": "Reinserisci la tua password",
+  "retype-password": "Conferma password *",
   "reqandoff": "Richieste/Offerte?",
   "req_tab_1": "Richieste agli altri",
   "req_tab_2": "Richieste a me",
