--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -142,11 +142,11 @@
   "address_placeholder": "Indirizzo ufficio *",
   "cf_placeholder": "Inserisci il tuo codice fiscale",
   "albo_placeholder": "Numero di iscrizione all'albo *",
-  "piva_placeholder": "Inserisci la tua partita iva",
+  "piva_placeholder": "Inserisci la tua Partita IVA",
   "profession_placeholder": "Professione *",
   "profession_popup_placeholder": "Selezione professione",
-  "area_placeholder": "Regione *",
-  "area_popup_placeholder": "Seleziona la regione in cui operi",
+  "area_placeholder": "Provincia *",
+  "area_popup_placeholder": "Seleziona la provincia in cui operi",
   "registration2_button_label": "Avanti",
   "retype-password": "Conferma password *",
   "reqandoff": "Richieste/Offerte?",
